# Sim_go1

./: Mid360_imu_sim  far_planner_stack  loam_interface  local_planner  sensor_scan_generation  terrain_analysis  terrain_analysis_ext
Mid360_imu_sim/urdf/: livox_mid360.xacro
gt_pose_interface/: CMakeLists.txt  package.xml
gt_pose_interface/src/: gtPoseInterface.cpp
loam_interface/launch/: loam_interface.launch
local_planner/launch/: local_planner.launch
local_planner/src/: pathFollower.cpp
terrain_analysis/launch/: terrain_analysis.launch
unitree_guide/unitree_move_base/config/: tare_navigation.rviz
unitree_guide/unitree_move_base/launch/: gtPoseAndScan.launch  rvizTARE.launch  tare_far_navigation.launch
unitree_ros/robots/go1_description/xacro/: robot.xacro
water_plant_inspection/: CMakeLists.txt  package.xml
water_plant_inspection/config/: inspection_points.yaml
water_plant_inspection/launch/: inspection.launch  simulation.launch
water_plant_inspection/logs/: inspection_log.txt
water_plant_inspection/scripts/: inspection_node.py
water_plant_inspection/worlds/: water_plant.world
