<?xml version="1.0"?>
<package format="2">
  <name>gt_pose_interface</name>
  <version>1.0.0</version>
  <description>GT pose interface: P3D odometry to registered scan + TF for TARE/FAR-Planner</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
</package>
