<?xml version="1.0"?>
<package format="2">
  <name>water_plant_inspection</name>
  <version>1.0.0</version>
  <description>Water plant inspection task using Go1 + TARE + FAR-Planner</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
